Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,23 +1,23 @@
-TYPES OF DOGS
-german shepherd
-border collie
-chesapeake bay retriever
-cavalier king charles spaniel
-labrador retriever
-mastiff
+<li>TYPES OF DOGS</li>
+<li>german shepherd</li>
+<li>border collie</li>
+<li>chesapeake bay retriever</li>
+<li>cavalier king charles spaniel</li>
+<li>labrador retriever</li>
+<li>mastiff</li>
 
-TYPES OF FRUIT
-orange
-apple
-pear
-plum
-nectarine
-honeydew melon
-cantaloupe
+<li>TYPES OF FRUIT</li>
+<li>orange</li>
+<li>apple</li>
+<li>pear</li>
+<li>plum</li>
+<li>nectarine</li>
+<li>honeydew melon</li>
+<li>cantaloupe</li>
 
-SONGS BY DMB
-"Where are you going?"
-"Dancing Nancies"
-"Ants Marching"
-"Bartender"
-"Gravedigger"
+<li>SONGS BY DMB</li>
+<li>"Where are you going?"</li>
+<li>"Dancing Nancies"</li>
+<li>"Ants Marching"</li>
+<li>"Bartender"</li>
+<li>"Gravedigger"</li>
