Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,4 +1,4 @@
-<li>TYPES OF DOGS</li>
+<p>TYPES OF DOGS</p>
 <ul>
   <li>german shepherd</li>
   <li>border collie</li>
@@ -8,7 +8,7 @@
   <li>mastiff</li>
 </ul>
 
-<li>TYPES OF FRUIT</li>
+<p>TYPES OF FRUIT</p>
 <ul>
   <li>orange</li>
   <li>apple</li>
@@ -19,7 +19,7 @@
   <li>cantaloupe</li>
 </ul>
 
-<li>SONGS BY DMB</li>
+<p>SONGS BY DMB</p>
 <ul>
   <li>"Where are you going?"</li>
   <li>"Dancing Nancies"</li>
